# kaggle-project-template

./: .gitignore  cookiecutter.json
{{cookiecutter.competition_name}}/: dvc.yaml  pyproject.toml
{{cookiecutter.competition_name}}/configs/: download_dataset.yaml
{{cookiecutter.competition_name}}/configs/dir/: local.yaml
{{cookiecutter.competition_name}}/run/: download_dataset.py
{{cookiecutter.competition_name}}/src/utils/: upload_dataset.py
{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
{{cookiecutter.project_name}}/configs/competition_info/: {{cookiecutter.competition_name}}.yaml
