[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }
]
dependencies = [
    "numpy>=1.26.1",
    "polars>=0.19.12",
    "pandas>=2.1.2",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.1",
    "seaborn>=0.13.0",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "hydra-core>=1.3.2",
    "torch>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true
